--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 
 <body onload="loaded()">
+    <!-- pre loader -->
     <div id="loaded">
         <div class="pre-load">
             <div></div>
@@ -18,14 +19,17 @@
         </div>
     </div>
     <main>
+        <!-- header -->
         <header>
             <h1>All Countries Short Information</h1>
             <small>All Data Comes From API</small>
         </header>
-        <div id="country-detail"></div>
-        <section id="countries">
 
-        </section>
+        <!-- country short info as detail -->
+        <div id="country-detail"></div>
+
+        <!-- display all countries -->
+        <section id="countries"></section>
     </main>
 
     <script src="js/scripts.js"></script>
